Fix macOS build